Replace isBlank() with trim().isEmpty() since isBlank isn't in Java 8.